--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,5 +23,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PE'
 - !lcsh 'Readers (Primary)'
+- GITenberg
 title: Tower's Little Primer, for the youngest class in primary school
 url: http://www.gutenberg.org/ebooks/40415
